syntax = "proto3";
package lubtd.orbit.toast;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "toast/params.proto";
import "toast/enable_map.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/lubtd/orbit/x/toast/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lubtd/orbit/toast/params";
  }
  // Queries a EnableMap by index.
	rpc EnableMap(QueryGetEnableMapRequest) returns (QueryGetEnableMapResponse) {
		option (google.api.http).get = "/lubtd/orbit/toast/enable_map/{address}";
	}

	// Queries a list of EnableMap items.
	rpc EnableMapAll(QueryAllEnableMapRequest) returns (QueryAllEnableMapResponse) {
		option (google.api.http).get = "/lubtd/orbit/toast/enable_map";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetEnableMapRequest {
	  string address = 1;

}

message QueryGetEnableMapResponse {
	EnableMap enableMap = 1 [(gogoproto.nullable) = false];
}

message QueryAllEnableMapRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEnableMapResponse {
	repeated EnableMap enableMap = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
